# KoikatuCharaLoader

./: .gitattributes  .gitignore  EmocreCharaData.py  EmocreMapData.py  EmocreSceneData.py  KoikatuCharaData.py  KoikatuSaveData.py  Makefile  README.ja.md  README.md  __init__.py  conftest.py  funcs.py  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cd.yml  ci.yml
kkloader/: AicomiCharaData.py  AmanatsuCharaData.py  EmocreCharaData.py  EmocreMapData.py  EmocreSceneData.py  HoneycomeCharaData.py  HoneycomeSceneData.py  HoneycomeSceneObjectLoader.py  KoikatuCharaData.py  KoikatuCharaHeader.py  KoikatuSaveData.py  KoikatuSceneData.py  KoikatuSceneObjectLoader.py  SummerVacationCharaData.py  SummerVacationSaveData.py  __init__.py  funcs.py
notebooks/: sandbox.ipynb  sandbox.ja.ipynb
samples/: ec_to_kk.py  kk_to_ec.py  salvage_character_from_scene.py  salvge_character_from_scene.py
test/: test_amanatsu_charadata.py  test_charadata.py  test_emocre_scenedata.py  test_honeycomedata.py  test_savedata.py  test_scenedata.py
tools/: quickdiff.py
