[tool.poetry]
name = "kkloader"
version = "0.0.0"
description = "a simple deserializer / serializer for Koikatu / EmotionCreators data."
authors = ["great-majority <wired.wireless0@gmail.com>"]
homepage = "https://github.com/great-majority/KoikatuCharaLoader"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
msgpack = "^1.0.3"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "(?P<base>\\d+(\\.\\d+)*)"
format = "{base}"