[project]
name = "kkloader"
dynamic = ["version"]
description = "a simple deserializer / serializer for Koikatu / EmotionCreators / Honeycome / SummerVacationScramble data."
authors = [
    {name = "great-majority", email = "wired.wireless0@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "msgpack>=1.0.3,<2",
    "pandas>=2.2.2,<3",
    "lz4>=4.4.4,<5",
    "cryptography>=46.0.3,<47",
]

[project.urls]
Homepage = "https://github.com/great-majority/KoikatuCharaLoader"

[dependency-groups]
dev = [
    "ruff>=0.6.3",
    "pytest>=7.1.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
pattern = "(?P<version>\\d+(\\.\\d+)*)"

[tool.ruff]
line-length = 255

[tool.ruff.lint]
extend-ignore = ["E203"]
select = ["I", "E", "F"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]
